--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 <body>
   <header>
    <nav class="navigation">
-      <a href="./index.html">WebStudio</a>
-      <ul>
-      <li><a href="">Studio</a></li>
-      <li><a href="">Portfolio</a></li>
-      <li><a href="">Contacts</a></li>
+      <a class="logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+      <ul class="list">
+      <li><a class="link" href="./index.html">Studio</a></li>
+      <li><a class="link" href="">Portfolio</a></li>
+      <li><a class="link" href="">Contacts</a></li>
       </ul>
    </nav>
    <address>
-      <ul class="contacts">
-         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-         <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <ul class="contacts list">
+         <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+         <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
    </address>
    </header>
@@ -92,7 +92,7 @@
        </section>
    </main>
    <footer>
-      <a href="./index.html" class="logo">WebStudio</a>
+      <a class="logo footer link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
       <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
