--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>MainPage</title>
    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./css/styles.css">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <header>
    <nav class="navigation">
       <a class="logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
       <ul class="list">
-      <li><a class="link" href="./index.html">Studio</a></li>
-      <li><a class="link" href="">Portfolio</a></li>
-      <li><a class="link" href="">Contacts</a></li>
+      <li><a class="nav-link link current" href="./index.html">Studio</a></li>
+      <li><a class="nav-link link" href="">Portfolio</a></li>
+      <li><a class="nav-link link" href="">Contacts</a></li>
       </ul>
    </nav>
    <address>
       <ul class="contacts list">
-         <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-         <li><a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+         <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+         <li><a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
       </ul>
    </address>
    </header>
