--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,65 +8,72 @@
    <title>MainPage</title>
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+   <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
    <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
-  <header>
-   <nav class="navigation">
-      <a class="logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
-      <ul class="list">
-      <li><a class="nav-link link current" href="./index.html">Studio</a></li>
-      <li><a class="nav-link link" href="">Portfolio</a></li>
-      <li><a class="nav-link link" href="">Contacts</a></li>
-      </ul>
-   </nav>
-   <address>
-      <ul class="contacts list">
-         <li><a class="mail link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-         <li><a class="tel link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
-   </address>
+   <header>
+      <nav class="navigation">
+         <a class="logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+         <ul class="list">
+            <li><a class="nav-link link current" href="./index.html">Studio</a></li>
+            <li><a class="nav-link link" href="">Portfolio</a></li>
+            <li><a class="nav-link link" href="">Contacts</a></li>
+         </ul>
+      </nav>
+      <address>
+         <ul class="contacts list">
+            <li><a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="tel-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+         </ul>
+      </address>
    </header>
    <main>
       <!-- Hero -->
       <section class="hero">
-         <h1>Effective Solutions for Your Business</h1>
+         <h1 class="hero-title">Effective Solutions<br> for Your Business</h1>
          <button type="button" class="hero-btn">Order Service</button>
-       </section>
-       <!-- Features -->
-       <section class="features">
+      </section>
+      <!-- Features -->
+      <section class="features">
          <h2 class="visually-hidden">Our credo</h2>
          <ul>
-         <li>
-            <h3>Strategy</h3>
-            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-         </li>
-         <li>
-            <h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-         </li>
-         <li>
-            <h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-         </li>
-         <li>
-            <h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-         </li>
+            <li>
+               <h3>Strategy</h3>
+               <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+            </li>
+            <li>
+               <h3>Punctuality</h3>
+               <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
+               </p>
+            </li>
+            <li>
+               <h3>Diligence</h3>
+               <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+               </p>
+            </li>
+            <li>
+               <h3>Technologies</h3>
+               <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
          </ul>
-       </section>
-       <!-- Work -->
-       <section class="work">
+      </section>
+      <!-- Work -->
+      <section class="work">
          <h2>What are we doing</h2>
          <ul>
             <li><img src="./images/work/computer.jpg" alt="Computer with opened program" width="360" height="300"></li>
             <li><img src="./images/work/phone.jpg" alt="Phone with program layers" width="360" height="300"></li>
-            <li><img src="./images/work/laptop.jpg" alt="The developer compares the design between the phone and the laptop" width="360" height="300"></li>
+            <li><img src="./images/work/laptop.jpg"
+                  alt="The developer compares the design between the phone and the laptop" width="360" height="300">
+            </li>
          </ul>
-       </section>
-       <!-- Team -->
-       <section class="team">
+      </section>
+      <!-- Team -->
+      <section class="team">
          <h2>Our Team</h2>
          <ul>
             <li>
@@ -89,11 +97,12 @@
                <p>UI Designer</p>
             </li>
          </ul>
-       </section>
+      </section>
    </main>
    <footer>
       <a class="logo footer link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
       <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </footer>
+   </footer>
 </body>
+
 </html>
