--- a/index.html
+++ b/index.html
@@ -40,31 +40,35 @@
       <!-- Features -->
       <section class="features">
          <h2 class="visually-hidden">Our credo</h2>
-         <ul>
+         <ul class="list">
             <li>
-               <h3>Strategy</h3>
-               <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+               <h3 class="features-title title">Strategy</h3>
+               <p class="features-text">Our goal is to identify the business problem to walk away with the perfect and
+                  creative solution.</p>
             </li>
             <li>
-               <h3>Punctuality</h3>
-               <p>Bring the key message to the brand's audience for the best price within the shortest possible time.
+               <h3 class="features-title title">Punctuality</h3>
+               <p class="features-text">Bring the key message to the brand's audience for the best price within the
+                  shortest possible time.
                </p>
             </li>
             <li>
-               <h3>Diligence</h3>
-               <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+               <h3 class="features-title title">Diligence</h3>
+               <p class="features-text">Research and confirm brands that present the strongest digital growth
+                  opportunities and minimize risk.
                </p>
             </li>
             <li>
-               <h3>Technologies</h3>
-               <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+               <h3 class="features-title title">Technologies</h3>
+               <p class="features-text">Design practice focused on digital experiences. We bring forth a deep passion
+                  for problem-solving.</p>
             </li>
          </ul>
       </section>
       <!-- Work -->
       <section class="work">
-         <h2>What are we doing</h2>
-         <ul>
+         <h2 class="section-title title">What are we doing</h2>
+         <ul class="list">
             <li><img src="./images/work/computer.jpg" alt="Computer with opened program" width="360" height="300"></li>
             <li><img src="./images/work/phone.jpg" alt="Phone with program layers" width="360" height="300"></li>
             <li><img src="./images/work/laptop.jpg"
@@ -74,34 +78,35 @@
       </section>
       <!-- Team -->
       <section class="team">
-         <h2>Our Team</h2>
-         <ul>
+         <h2 class="section-title title">Our Team</h2>
+         <ul class="list">
             <li>
                <img src="./images/team/mark-guerrero.jpg" alt="Mark Guerrero's foto" width="264" height="260">
-               <h3>Mark Guerrero</h3>
+               <h3 class="team-title title">Mark Guerrero</h3>
                <p>Product Designer</p>
             </li>
             <li>
                <img src="./images/team/tom-ford.jpg" alt="Tom Ford's foto" width="264" height="260">
-               <h3>Tom Ford</h3>
+               <h3 class="team-title title">Tom Ford</h3>
                <p>Frontend Developer</p>
             </li>
             <li>
                <img src="./images/team/camila-garcia.jpg" alt="Camila Garcia's foto" width="264" height="260">
-               <h3>Camila Garcia</h3>
+               <h3 class="team-title title">Camila Garcia</h3>
                <p>Marketing</p>
             </li>
             <li>
                <img src="./images/team/daniel-wilson.jpg" alt="Daniel Wilson's foto" width="264" height="260">
-               <h3>Daniel Wilson</h3>
+               <h3 class="team-title title">Daniel Wilson</h3>
                <p>UI Designer</p>
             </li>
          </ul>
       </section>
    </main>
-   <footer>
+   <footer class="footer-section">
       <a class="logo footer link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
-      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
+         solutions.</p>
    </footer>
 </body>
 
