--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </section>
       <!-- Work -->
       <section class="work">
-         <h2 class="section-title title">What are we doing</h2>
+         <h2 class="section-title">What are we doing</h2>
          <ul class="list">
             <li><img src="./images/work/computer.jpg" alt="Computer with opened program" width="360" height="300"></li>
             <li><img src="./images/work/phone.jpg" alt="Phone with program layers" width="360" height="300"></li>
@@ -78,27 +78,35 @@
       </section>
       <!-- Team -->
       <section class="team">
-         <h2 class="section-title title">Our Team</h2>
-         <ul class="list">
+         <h2 class="section-title">Our Team</h2>
+         <ul class="team-list list">
             <li>
                <img src="./images/team/mark-guerrero.jpg" alt="Mark Guerrero's foto" width="264" height="260">
-               <h3 class="team-title title">Mark Guerrero</h3>
-               <p>Product Designer</p>
+               <div class="team-card-discription">
+                  <h3 class="team-title title">Mark Guerrero</h3>
+                  <p>Product Designer</p>
+               </div>
             </li>
             <li>
                <img src="./images/team/tom-ford.jpg" alt="Tom Ford's foto" width="264" height="260">
-               <h3 class="team-title title">Tom Ford</h3>
-               <p>Frontend Developer</p>
+               <div class="team-card-discription">
+                  <h3 class="team-title title">Tom Ford</h3>
+                  <p>Frontend Developer</p>
+               </div>
             </li>
             <li>
                <img src="./images/team/camila-garcia.jpg" alt="Camila Garcia's foto" width="264" height="260">
-               <h3 class="team-title title">Camila Garcia</h3>
-               <p>Marketing</p>
+               <div class="team-card-discription">
+                  <h3 class="team-title title">Camila Garcia</h3>
+                  <p>Marketing</p>
+               </div>
             </li>
             <li>
                <img src="./images/team/daniel-wilson.jpg" alt="Daniel Wilson's foto" width="264" height="260">
-               <h3 class="team-title title">Daniel Wilson</h3>
-               <p>UI Designer</p>
+               <div class="team-card-discription">
+                  <h3 class="team-title title">Daniel Wilson</h3>
+                  <p>UI Designer</p>
+               </div>
             </li>
          </ul>
       </section>
