--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
    <header>
       <nav class="navigation">
-         <a class="logo link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+         <a class="logo link" href="./index.html">Web<span class="logo-part-header">Studio</span></a>
          <ul class="list">
             <li><a class="nav-link link current" href="./index.html">Studio</a></li>
             <li><a class="nav-link link" href="">Portfolio</a></li>
@@ -112,7 +112,7 @@
       </section>
    </main>
    <footer class="footer-section">
-      <a class="logo footer link" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+      <a class="logo footer link" href="./index.html">Web<span class="logo-part-footer">Studio</span></a>
       <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth
          solutions.</p>
    </footer>
