--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a class="nav-link link" href="">Contacts</a></li>
          </ul>
       </nav>
-      <address>
+      <address class="mail-tel">
          <ul class="contacts list">
             <li><a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="tel-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
