--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <a class="logo link" href="./index.html">Web<span class="logo-part-header">Studio</span></a>
          <ul class="list">
             <li><a class="nav-link link current" href="./index.html">Studio</a></li>
-            <li><a class="nav-link link" href="">Portfolio</a></li>
+            <li><a class="nav-link link" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-link link" href="">Contacts</a></li>
          </ul>
       </nav>
@@ -39,7 +39,7 @@
       </section>
       <!-- Features -->
       <section class="features">
-         <h2 class="visually-hidden">Our credo</h2>
+         <h2 hidden class="visually-hidden">Our features</h2>
          <ul class="list">
             <li>
                <h3 class="features-title title">Strategy</h3>
