--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>MainPage</title>
+   <title>Portfolio</title>
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link
@@ -33,8 +33,8 @@
    </header>
    <main>
       <!-- Filter -->
-      <section>
-         <h1 hidden class="visually-hidden">Projects</h1>
+      <section class="filter">
+         <h1 hidden class="visually-hidden">Portfolio</h1>
          <ul class="list">
             <li><button type="button" class="filter-btn">All</button></li>
             <li><button type="button" class="filter-btn">Web Site</button></li>
@@ -43,6 +43,57 @@
             <li><button type="button" class="filter-btn">Marketing</button></li>
          </ul>
       </section>
+      <section class="projects">
+         <h2 hidden class="visually-hidden">Projects</h2>
+         <ul class="list">
+            <li class="list-item">
+               <img src="./images/projects/img-1.jpg" alt="" width="360" height="300" class="project-foto">
+               <h3 class="project-title">Banking App Interface Concept</h3>
+               <p class="project-discr">App</p>
+            </li>
+            <li class="list-item">
+               <img src="./images/projects/img-2.jpg" alt="" width="360" height="300" class="project-foto">
+               <h3 class="project-title">Cashless Payment</h3>
+               <p class="project-discr">Marketing</p>
+            </li>
+            <li class="list-item">
+               <img src="./images/projects/img-3.jpg" alt="" width="360" height="300" class="project-foto">
+               <h3 class="project-title">Meditation App</h3>
+               <p class="project-discr">App</p>
+            </li>
+            <li class="list-item">
+               <img src="./images/projects/img-4.jpg" alt="" width="360" height="300" class="project-foto">
+               <h3 class="project-title">Taxi Service</h3>
+               <p class="project-discr">Marketing</p>
+            </li>
+            <li class="list-item">
+               <img src="./images/projects/img-5.jpg" alt="" width="360" height="300" class="project-foto">
+               <h3 class="project-title">Screen Illustrations</h3>
+               <p class="project-discr">Design</p>
+            </li>
+            <li class="list-item">
+               <img src="./images/projects/img-6.jpg" alt="" width="360" height="300" class="project-foto">
+               <h3 class="project-title">Online Courses</h3>
+               <p class="project-discr">Marketing</p>
+            </li>
+            <li class="list-item">
+               <img src="./images/projects/img-7.jpg" alt="" width="360" height="300" class="project-foto">
+               <h3 class="project-title">Instagram Stories Concept</h3>
+               <p class="project-discr">Design</p>
+            </li>
+            <li class="list-item">
+               <img src="./images/projects/img-8.jpg" alt="" width="360" height="300" class="project-foto">
+               <h3 class="project-title">Organic Food</h3>
+               <p class="project-discr">Web Site</p>
+            </li>
+            <li class="list-item">
+               <img src="./images/projects/img-9.jpg" alt="" width="360" height="300" class="project-foto">
+               <h3 class="project-title">Fresh Coffee</h3>
+               <p class="project-discr">Web Site</p>
+            </li>
+         </ul>
+      </section>
+
 
 
    </main>
