--- a/portfolio.html
+++ b/portfolio.html
@@ -50,52 +50,52 @@
             <li class="list-item">
                <img src="./images/projects/img-1.jpg" alt="Banking App Interface Concept" width="360" height="300"
                   class="project-foto">
-               <h3 class="project-title">Banking App Interface Concept</h3>
+               <h3 class="project-title title">Banking App Interface Concept</h3>
                <p class="project-discr">App</p>
             </li>
             <li class="list-item">
                <img src="./images/projects/img-2.jpg" alt="Cashless Payment" width="360" height="300"
                   class="project-foto">
-               <h3 class="project-title">Cashless Payment</h3>
+               <h3 class="project-title title">Cashless Payment</h3>
                <p class="project-discr">Marketing</p>
             </li>
             <li class="list-item">
                <img src="./images/projects/img-3.jpg" alt="Meditation App" width="360" height="300"
                   class="project-foto">
-               <h3 class="project-title">Meditation App</h3>
+               <h3 class="project-title title">Meditation App</h3>
                <p class="project-discr">App</p>
             </li>
             <li class="list-item">
                <img src="./images/projects/img-4.jpg" alt="Taxi Service" width="360" height="300" class="project-foto">
-               <h3 class="project-title">Taxi Service</h3>
+               <h3 class="project-title title">Taxi Service</h3>
                <p class="project-discr">Marketing</p>
             </li>
             <li class="list-item">
                <img src="./images/projects/img-5.jpg" alt="Screen Illustrations" width="360" height="300"
                   class="project-foto">
-               <h3 class="project-title">Screen Illustrations</h3>
+               <h3 class="project-title title">Screen Illustrations</h3>
                <p class="project-discr">Design</p>
             </li>
             <li class="list-item">
                <img src="./images/projects/img-6.jpg" alt="Online Courses" width="360" height="300"
                   class="project-foto">
-               <h3 class="project-title">Online Courses</h3>
+               <h3 class="project-title title">Online Courses</h3>
                <p class="project-discr">Marketing</p>
             </li>
             <li class="list-item">
                <img src="./images/projects/img-7.jpg" alt="Instagram Stories Concept" width="360" height="300"
                   class="project-foto">
-               <h3 class="project-title">Instagram Stories Concept</h3>
+               <h3 class="project-title title">Instagram Stories Concept</h3>
                <p class="project-discr">Design</p>
             </li>
             <li class="list-item">
                <img src="./images/projects/img-8.jpg" alt="Organic Food" width="360" height="300" class="project-foto">
-               <h3 class="project-title">Organic Food</h3>
+               <h3 class="project-title title">Organic Food</h3>
                <p class="project-discr">Web Site</p>
             </li>
             <li class="list-item">
                <img src="./images/projects/img-9.jpg" alt="Fresh Coffee" width="360" height="300" class="project-foto">
-               <h3 class="project-title">Fresh Coffee</h3>
+               <h3 class="project-title title">Fresh Coffee</h3>
                <p class="project-discr">Web Site</p>
             </li>
          </ul>
