--- a/index.html
+++ b/index.html
@@ -80,33 +80,25 @@
       <section class="team">
          <h2 class="section-title">Our Team</h2>
          <ul class="team-list list">
-            <li>
+            <li class="team-card">
                <img src="./images/team/mark-guerrero.jpg" alt="Mark Guerrero's foto" width="264" height="260">
-               <div class="team-card-discription">
-                  <h3 class="team-title title">Mark Guerrero</h3>
-                  <p>Product Designer</p>
-               </div>
+               <h3 class="team-title title">Mark Guerrero</h3>
+               <p>Product Designer</p>
             </li>
-            <li>
+            <li class="team-card">
                <img src="./images/team/tom-ford.jpg" alt="Tom Ford's foto" width="264" height="260">
-               <div class="team-card-discription">
-                  <h3 class="team-title title">Tom Ford</h3>
-                  <p>Frontend Developer</p>
-               </div>
+               <h3 class="team-title title">Tom Ford</h3>
+               <p>Frontend Developer</p>
             </li>
-            <li>
+            <li class="team-card">
                <img src="./images/team/camila-garcia.jpg" alt="Camila Garcia's foto" width="264" height="260">
-               <div class="team-card-discription">
-                  <h3 class="team-title title">Camila Garcia</h3>
-                  <p>Marketing</p>
-               </div>
+               <h3 class="team-title title">Camila Garcia</h3>
+               <p>Marketing</p>
             </li>
-            <li>
+            <li class="team-card">
                <img src="./images/team/daniel-wilson.jpg" alt="Daniel Wilson's foto" width="264" height="260">
-               <div class="team-card-discription">
-                  <h3 class="team-title title">Daniel Wilson</h3>
-                  <p>UI Designer</p>
-               </div>
+               <h3 class="team-title title">Daniel Wilson</h3>
+               <p>UI Designer</p>
             </li>
          </ul>
       </section>
