--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
          <a class="logo link" href="./index.html">Web<span class="logo-part-header">Studio</span></a>
          <ul class="list">
             <li><a class="nav-link link" href="./index.html">Studio</a></li>
-            <li><a class="nav-link link current" href="./portfolio.html">Portfolio</a></li>
+            <li><a class="nav-link link" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-link link" href="">Contacts</a></li>
          </ul>
       </nav>
@@ -45,55 +45,76 @@
          <!-- Projects -->
          <ul class="list">
             <li class="list-item">
-               <img src="./images/projects/img-1.jpg" alt="Banking App Interface Concept" width="360" height="300"
-                  class="project-foto">
-               <h2 class="project-title title">Banking App Interface Concept</h2>
-               <p class="project-discr">App</p>
+               <a class="link" href="">
+                  <img src="./images/projects/img-1.jpg" alt="Banking App Interface Concept" width="360" height="300"
+                     class="project-foto">
+                  <h2 class="project-title title">Banking App Interface Concept</h2>
+                  <p class="project-discr">App</p>
+               </a>
             </li>
             <li class="list-item">
-               <img src="./images/projects/img-2.jpg" alt="Cashless Payment" width="360" height="300"
-                  class="project-foto">
-               <h3 class="project-title title">Cashless Payment</h3>
-               <p class="project-discr">Marketing</p>
+               <a class="link" href="">
+                  <img src="./images/projects/img-2.jpg" alt="Cashless Payment" width="360" height="300"
+                     class="project-foto">
+                  <h3 class="project-title title">Cashless Payment</h3>
+                  <p class="project-discr">Marketing</p>
+               </a>
             </li>
             <li class="list-item">
-               <img src="./images/projects/img-3.jpg" alt="Meditation App" width="360" height="300"
-                  class="project-foto">
-               <h2 class="project-title title">Meditation App</h2>
-               <p class="project-discr">App</p>
+               <a class="link" href="">
+                  <img src="./images/projects/img-3.jpg" alt="Meditation App" width="360" height="300"
+                     class="project-foto">
+                  <h2 class="project-title title">Meditation App</h2>
+                  <p class="project-discr">App</p>
+               </a>
             </li>
             <li class="list-item">
-               <img src="./images/projects/img-4.jpg" alt="Taxi Service" width="360" height="300" class="project-foto">
-               <h2 class="project-title title">Taxi Service</h2>
-               <p class="project-discr">Marketing</p>
+               <a class="link" href="">
+                  <img src="./images/projects/img-4.jpg" alt="Taxi Service" width="360" height="300"
+                     class="project-foto">
+                  <h2 class="project-title title">Taxi Service</h2>
+                  <p class="project-discr">Marketing</p>
+               </a>
             </li>
             <li class="list-item">
-               <img src="./images/projects/img-5.jpg" alt="Screen Illustrations" width="360" height="300"
-                  class="project-foto">
-               <h2 class="project-title title">Screen Illustrations</h2>
-               <p class="project-discr">Design</p>
+               <a class="link" href="">
+                  <img src="./images/projects/img-5.jpg" alt="Screen Illustrations" width="360" height="300"
+                     class="project-foto">
+                  <h2 class="project-title title">Screen Illustrations</h2>
+                  <p class="project-discr">Design</p>
+               </a>
             </li>
             <li class="list-item">
-               <img src="./images/projects/img-6.jpg" alt="Online Courses" width="360" height="300"
-                  class="project-foto">
-               <h2 class="project-title title">Online Courses</h2>
-               <p class="project-discr">Marketing</p>
+               <a class="link" href="">
+                  <img src="./images/projects/img-6.jpg" alt="Online Courses" width="360" height="300"
+                     class="project-foto">
+                  <h2 class="project-title title">Online Courses</h2>
+                  <p class="project-discr">Marketing</p>
+               </a>
             </li>
             <li class="list-item">
-               <img src="./images/projects/img-7.jpg" alt="Instagram Stories Concept" width="360" height="300"
-                  class="project-foto">
-               <h2 class="project-title title">Instagram Stories Concept</h2>
-               <p class="project-discr">Design</p>
+               <a class="link" href="">
+                  <img src="./images/projects/img-7.jpg" alt="Instagram Stories Concept" width="360" height="300"
+                     class="project-foto">
+                  <h2 class="project-title title">Instagram Stories Concept</h2>
+                  <p class="project-discr">Design</p>
+               </a>
             </li>
             <li class="list-item">
-               <img src="./images/projects/img-8.jpg" alt="Organic Food" width="360" height="300" class="project-foto">
-               <h2 class="project-title title">Organic Food</h2>
-               <p class="project-discr">Web Site</p>
+               <a class="link" href="">
+                  <img src="./images/projects/img-8.jpg" alt="Organic Food" width="360" height="300"
+                     class="project-foto">
+                  <h2 class="project-title title">Organic Food</h2>
+                  <p class="project-discr">Web Site</p>
+               </a>
             </li>
             <li class="list-item">
-               <img src="./images/projects/img-9.jpg" alt="Fresh Coffee" width="360" height="300" class="project-foto">
-               <h2 class="project-title title">Fresh Coffee</h2>
-               <p class="project-discr">Web Site</p>
+               <a class="link" href="">
+                  <img src="./images/projects/img-9.jpg" alt="Fresh Coffee" width="360" height="300"
+                     class="project-foto">
+                  <h2 class="project-title title">Fresh Coffee</h2>
+                  <p class="project-discr">Web Site</p>
+               </a>
             </li>
          </ul>
       </section>
