--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav class="navigation">
          <a class="logo link" href="./index.html">Web<span class="logo-part-header">Studio</span></a>
          <ul class="list">
-            <li><a class="nav-link link current" href="./index.html">Studio</a></li>
+            <li><a class="nav-link link" href="./index.html">Studio</a></li>
             <li><a class="nav-link link" href="./portfolio.html">Portfolio</a></li>
             <li><a class="nav-link link" href="">Contacts</a></li>
          </ul>
@@ -83,22 +83,22 @@
             <li class="team-card">
                <img src="./images/team/mark-guerrero.jpg" alt="Mark Guerrero's foto" width="264" height="260">
                <h3 class="team-title title">Mark Guerrero</h3>
-               <p>Product Designer</p>
+               <p class="team-descr">Product Designer</p>
             </li>
             <li class="team-card">
                <img src="./images/team/tom-ford.jpg" alt="Tom Ford's foto" width="264" height="260">
                <h3 class="team-title title">Tom Ford</h3>
-               <p>Frontend Developer</p>
+               <p class="team-descr">Frontend Developer</p>
             </li>
             <li class="team-card">
                <img src="./images/team/camila-garcia.jpg" alt="Camila Garcia's foto" width="264" height="260">
                <h3 class="team-title title">Camila Garcia</h3>
-               <p>Marketing</p>
+               <p class="team-descr">Marketing</p>
             </li>
             <li class="team-card">
                <img src="./images/team/daniel-wilson.jpg" alt="Daniel Wilson's foto" width="264" height="260">
                <h3 class="team-title title">Daniel Wilson</h3>
-               <p>UI Designer</p>
+               <p class="team-descr">UI Designer</p>
             </li>
          </ul>
       </section>
