--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </nav>
       <address class="mail-tel">
          <ul class="contacts list">
-            <li><a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="tel-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a class="mail-tel-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="mail-tel-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
          </ul>
       </address>
    </header>
