--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
       </nav>
       <address class="mail-tel">
          <ul class="contacts list">
-            <li><a class="mail-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="tel-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            <li><a class="mail-tel-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="mail-tel-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
          </ul>
       </address>
    </header>
@@ -56,7 +56,7 @@
                <a class="link" href="">
                   <img src="./images/projects/img-2.jpg" alt="Cashless Payment" width="360" height="300"
                      class="project-foto">
-                  <h3 class="project-title title">Cashless Payment</h3>
+                  <h2 class="project-title title">Cashless Payment</h2>
                   <p class="project-discr">Marketing</p>
                </a>
             </li>
